# vsg

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  aclocal.m4  configure.ac  svn2cl-authors.xml  types.list  vsg-config.h.in  vsg.pc.in  vsgd.pc.in  vsgf.pc.in
bindings/: Makefile.am
bindings/python/: .gitignore  Makefile.am  __init__.py  files_list  h2def.py  pyvsg_boxed_pyobject.c  pyvsg_boxed_pyobject.h  vsg-types@t@.defs  vsg.defs  vsg@t@.defs  vsg@t@.override  vsgconstants.c  vsgconstants.h  vsgconstants@t@.c  vsgconstants@t@.h  vsgmatrix3@t@.override  vsgmatrix4@t@.override  vsgmodule.c  vsgprtree2@t@.override  vsgprtree3@t@.override  vsgquaternion@t@.override  vsgtypedefs.py  vsgvector2@t@.override  vsgvector3@t@.override
bindings/python/docs/: .gitignore  Makefile.am  devhelp.xsl  pyvsgdocs.xml  pyvsgdocs.xsl  vsgdocgen.py  vsgsupmatrix3@t@.defs  vsgsupmatrix4@t@.defs  vsgsupquaternion@t@.defs  vsgsupvector2@t@.defs  vsgsupvector3@t@.defs
bindings/python/docs/images/: Makefile.am
bindings/python/examples/: Makefile.am  glutwindow.py  prtree2d.py  prtree2d_hilbert.py  prtree3d_hilbert.py  quatf.py  v2f.py  v3f.py
docs/reference/: .gitignore  Makefile.am  version.xml.in  vsg-docs.xml  vsg-sections.txt
docs/reference/tmpl/: .gitignore  vsg-unused.sgml  vsg.sgml  vsgcommbuffer.sgml  vsgd.sgml  vsgf.sgml  vsgmatrix3@t@-intro.xml  vsgmatrix3d.sgml  vsgmatrix3f.sgml  vsgmatrix4@t@-intro.xml  vsgmatrix4d.sgml  vsgmatrix4f.sgml  vsgmpi.sgml  vsgpackedmsg.sgml  vsgprtree-common.sgml  vsgprtree-parallel.sgml  vsgprtree2-common.sgml  vsgprtree2@t@-intro.xml  vsgprtree2d.sgml  vsgprtree2f.sgml  vsgprtree3-common.sgml  vsgprtree3@t@-intro.xml  vsgprtree3d.sgml  vsgprtree3f.sgml  vsgprtreekey3d.sgml  vsgprtreekey3f.sgml  vsgquaternion@t@-intro.xml  vsgquaterniond.sgml  vsgquaternionf.sgml  vsgvector2@t@-intro.xml  vsgvector2d.sgml  vsgvector2f.sgml  vsgvector3@t@-intro.xml  vsgvector3d.sgml  vsgvector3f.sgml
m4/: Makefile.am  acx_mpi_paths.m4
src/: .gitignore  Makefile.am  prtreetest.c  sources.list  vsg.c  vsg.h  vsg@t@-inline.h  vsg@t@.c  vsg@t@.h  vsgcommbuffer-private.h  vsgcommbuffer.c  vsgcommbuffer.h  vsgmatrix3@t@-inline.h  vsgmatrix3@t@.c  vsgmatrix3@t@.h  vsgmatrix4@t@-inline.h  vsgmatrix4@t@.c  vsgmatrix4@t@.h  vsgmpi.h.in  vsgpackedmsg.c  vsgpackedmsg.h  vsgprtree-common.h  vsgprtree-parallel.c  vsgprtree-parallel.h  vsgprtree2-common.h  vsgprtree2@t@-extras.c  vsgprtree2@t@-extras.h  vsgprtree2@t@-parallel.c  vsgprtree2@t@-parallel.h  vsgprtree2@t@-private.h  vsgprtree2@t@.c  vsgprtree2@t@.h  vsgprtree3-common.h  vsgprtree3@t@-extras.c  vsgprtree3@t@-extras.h  vsgprtree3@t@-parallel.c  vsgprtree3@t@-parallel.h  vsgprtree3@t@-private.h  vsgprtree3@t@.c  vsgprtree3@t@.h  (+14 more)
tests/: .gitignore  Makefile.am  atlocal.in  commbuffer.c  hilbert2-lvl1.ref  hilbert2-lvl2.ref  hilbert2-lvl3.ref  hilbert2-lvl4.ref  hilbert2-lvl5.ref  hilbert3-lvl1.ref  hilbert3-lvl2.ref  hilbert3-lvl3.ref  hilbert3-lvl4.ref  mat3add.c  mat3ops.at  mat4add.c  mat4ops.at  parallel.at  prtree2.at  prtree2clone.c  prtree2hilb.c  prtree2mv.c  prtree2nftrav.c  prtree2nftrave.c  prtree2paradist.c  prtree2parallel.c  prtree2paranftrav.c  prtree2pt.c  prtree2virt-maxbox.c  prtree3.at  prtree3clone.c  prtree3hilb.c  prtree3mv.c  prtree3nftrav.c  prtree3nftrave.c  prtree3paradist.c  prtree3parallel.c  prtree3paranftrav.c  prtree3pt.c  prtree3virt-maxbox.c  (+21 more)
